--- a/TeachersTestAppWithLogging/TeachersTestAppWithLogging.csproj
+++ b/TeachersTestAppWithLogging/TeachersTestAppWithLogging.csproj
@@ -21,5 +21,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.2" />
+    <PackageReference Include="Material.Avalonia" Version="3.2.2.74-nightly" />
   </ItemGroup>
 </Project>
