--- a/TeachersTestAppWithLogging/TeachersTestAppWithLogging.csproj
+++ b/TeachersTestAppWithLogging/TeachersTestAppWithLogging.csproj
@@ -22,5 +22,12 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.2" />
     <PackageReference Include="Material.Avalonia" Version="3.2.2.74-nightly" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
   </ItemGroup>
 </Project>
